# companion

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
app/: __init__.py  agents.py  analysis.py  api_models.py  companion.py  config.py  consolidation.py  debug_trace.py  embedding.py  inference.py  main.py  observability.py  ports.py  prompting.py  retrieval.py  safety.py  schemas.py  services.py  store_adapters.py
docs/: companion-abstraction.md  deployment_checklist.md  multi-character-plan.md  next-gen-memory-todo.md  operations_runbook.md  release_criteria.md  rmm-paper-ideas.md  temporal-state-design.md  voice-integration-plan.md
evals/: baseline_chat_eval.json
scripts/: conversation_test.py  extraction_harness.py  migrate_qdrant.py  response_quality_test.py  run_eval.py  worker.py
tests/: conftest.py  test_affect.py  test_agents.py  test_analysis.py  test_api.py  test_companion_facts.py  test_companion_prompt.py  test_consolidation.py  test_contracts.py  test_debug_tracing.py  test_embedding.py  test_eval_runner.py  test_external_stores_integration.py  test_fact_extraction.py  test_fact_extraction_quality.py  test_health.py  test_importance.py  test_inference_gateway.py  test_orchestrator.py  test_reranking.py  test_retrieval.py  test_safety_observability.py  test_session_isolation.py  test_sse.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+28 files in other folders)
