[project]
name = "project-aether"
version = "0.1.0"
description = "FastAPI service for Project Aether"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.9",
  "qdrant-client>=1.15.1",
  "neo4j>=5.28.2",
  "httpx>=0.28.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "ruff>=0.13.0",
  "mypy>=1.17.0",
  "pre-commit>=4.3.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
